[gd_scene load_steps=9 format=3 uid="uid://n0hihwwu4v08"]

[ext_resource type="Script" uid="uid://dd0jsyk46621x" path="res://pause_menu/scripts/pause_menu.gd" id="1_5hbt6"]
[ext_resource type="PackedScene" uid="uid://cn4t1q48acppn" path="res://pause_menu/map_node.tscn" id="2_rd7dy"]

[sub_resource type="FontVariation" id="FontVariation_5hbt6"]
spacing_glyph = 6

[sub_resource type="Gradient" id="Gradient_rd7dy"]
offsets = PackedFloat32Array(0, 0.52666664, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.3460542, 0.86643296, 1.0029256, 1, 0.011764706, 0.23137255, 0.9490196, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uwtdo"]
gradient = SubResource("Gradient_rd7dy")
width = 5
height = 5
fill = 1
fill_from = Vector2(0.5046729, 0.49532712)
fill_to = Vector2(0.50934577, 0)

[sub_resource type="Animation" id="Animation_s1glv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b4s0c"]
resource_name = "default"
length = 0.7
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.4, 0.5058824, 0.9607843, 0.7529412)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wn31l"]
_data = {
&"RESET": SubResource("Animation_s1glv"),
&"default": SubResource("Animation_b4s0c")
}

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_5hbt6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.10625774, 0.08667153, 0.08667153, 1)

[node name="ColorRect2" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0.05194843, 0.05159718, 0.05159718, 1)

[node name="Label" type="Label" parent="Control/ColorRect2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -7.5
offset_right = -16.0
offset_bottom = 7.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.35064948, 0.19988514, 0.17071263, 1)
theme_override_fonts/font = SubResource("FontVariation_5hbt6")
text = "PAUSED"
horizontal_alignment = 2

[node name="PauseScreen" type="Control" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect3" type="ColorRect" parent="Control/PauseScreen"]
layout_mode = 0
offset_left = 114.0
offset_top = 10.0
offset_right = 469.0
offset_bottom = 216.0
color = Color(0.024136992, 0.024793804, 0.024348442, 1)

[node name="Map" type="Control" parent="Control/PauseScreen"]
anchors_preset = 0
offset_left = 125.0
offset_top = 35.0
offset_right = 456.0
offset_bottom = 205.0

[node name="MapNode" parent="Control/PauseScreen/Map" instance=ExtResource("2_rd7dy")]
modulate = Color(0.40734744, 0.7511804, 0.3311289, 1)
layout_mode = 0
offset_left = 7.0
offset_top = 27.0
offset_right = 25.0
offset_bottom = 34.0
linked_scene = "uid://bl8r7qerfsyvj"
entrances_right = Array[float]([2.875])

[node name="MapNode2" parent="Control/PauseScreen/Map" instance=ExtResource("2_rd7dy")]
modulate = Color(0.40734744, 0.7511804, 0.3311289, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 27.0
offset_right = 48.0
offset_bottom = 34.0
linked_scene = "uid://b4l3kfffjnr7x"
entrances_bottom = Array[float]([2.0])
entrances_left = Array[float]([2.7249999999999996])

[node name="MapNode3" parent="Control/PauseScreen/Map" instance=ExtResource("2_rd7dy")]
modulate = Color(0.33082023, 0.41618705, 0.54073197, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 35.0
offset_right = 50.0
offset_bottom = 42.0
linked_scene = "uid://bubadi6sow8su"
entrances_top = Array[float]([2.0])
entrances_right = Array[float]([2.0])

[node name="MapNode4" parent="Control/PauseScreen/Map" instance=ExtResource("2_rd7dy")]
modulate = Color(0.8745098, 0.19607843, 0.8509804, 1)
layout_mode = 0
offset_left = 52.0
offset_top = 35.0
offset_right = 65.0
offset_bottom = 42.0
linked_scene = "uid://c4qqx3ud14s1g"
entrances_right = Array[float]([2.0])
entrances_left = Array[float]([2.0])

[node name="Playerindictor" type="Control" parent="Control/PauseScreen/Map"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
offset_left = 10.0
offset_top = 31.0
offset_right = 10.0
offset_bottom = 31.0

[node name="TextureRect" type="TextureRect" parent="Control/PauseScreen/Map/Playerindictor"]
layout_mode = 0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
texture = SubResource("GradientTexture2D_uwtdo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/PauseScreen/Map/Playerindictor"]
libraries = {
&"": SubResource("AnimationLibrary_wn31l")
}
autoplay = "default"

[node name="Label" type="Label" parent="Control/PauseScreen"]
layout_mode = 0
offset_left = 13.0
offset_top = 19.0
offset_right = 72.0
offset_bottom = 34.0
text = "Abilities"

[node name="Label2" type="Label" parent="Control/PauseScreen"]
layout_mode = 0
offset_left = 117.0
offset_top = 19.0
offset_right = 157.0
offset_bottom = 34.0
text = "Map"

[node name="SystemMenuButton" type="Button" parent="Control/PauseScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -31.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "System"

[node name="System" type="Control" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/System"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_top = 29.0
offset_right = 112.0
offset_bottom = 218.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Control/System/VBoxContainer"]
layout_mode = 2

[node name="BackToMapButton" type="Button" parent="Control/System/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Map"

[node name="BackToTitleButton" type="Button" parent="Control/System/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Title"

[node name="Label" type="Label" parent="Control/System/VBoxContainer"]
layout_mode = 2
text = "Audio Levels"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/System/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/System/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Music "

[node name="MusicHSlider" type="HSlider" parent="Control/System/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/System/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/System/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "SFX"

[node name="SFXHSlider" type="HSlider" parent="Control/System/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/System/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/System/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "UI"

[node name="UIHSlider" type="HSlider" parent="Control/System/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5
